--- a/css/index.css
+++ b/css/index.css
@@ -50,9 +50,9 @@ html{
 body {
     font-family: Open Sans;
     height: 100%;
-
 }
 header {
+    /*background-image: url("css/img/mari_home.jpg");*/
     background-color: transparent;
     box-sizing: border-box;
     height: 100%;
@@ -61,7 +61,6 @@ header {
     width: 100%;
     padding: 20px 100px 0 100px;
 }
-
 header .header-container {
     display: flex;
     justify-content: space-between;
@@ -118,16 +117,23 @@ header a {
   transform: translateY(-50%);
 }
 section.about-me {
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    height: auto;
-    background-color: white;
-    padding: 100px 200px 100px 100px;
+    box-sizing: border-box;
     display: flex;
     flex-direction: row;
+    height: auto;
+    margin: 0 auto;
+    padding: 7% 12%;
     width: 100%;
-    max-width: 1200px;
+    list-style: none;
+
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  
+  /*-webkit-flex-flow: row wrap;*/
+  justify-content: space-around;
 }
 section .hi {
     font-size: 70px;
@@ -136,19 +142,21 @@ section .hi {
     color: #ff3399;
     font-weight: bold;
     line-height: 100px;
+    margin: 0 auto;
 }
 section .my-story {
-    padding-left: 100px;
-    text-align: left;
     font-weight: 300;
-    letter-spacing: .02em;
-    line-height: 130%;
+    letter-spacing: .03em;
+    line-height: 140%;
+    margin: 0 auto;
+    padding-left: 25px;
+    width: auto;
 }
 .workspace {
     background-size: cover;
     background-attachment: scroll;
     background-repeat: no-repeat;
-    height: 100%;
+    height: 60%;
     left: 0;
     position: relative;
     top: 0;
@@ -175,7 +183,7 @@ section .work, section .life {
     background-size: cover;
     background-attachment: scroll;
     background-repeat: no-repeat;
-    height: 100%;
+    height: 60%;
     left: 0;
     position: relative;
     top: 0;
@@ -259,8 +267,8 @@ ul.flex-container {
 .get-in-touch, #thanks {
     padding: 8px;
     font-weight: 300;
-    letter-spacing: .02em;
-    line-height: 130%;
+    letter-spacing: .03em;
+    line-height: 140%;
 }
 .flex-outer > label > span {
     flex: 1 0 120px;
@@ -307,6 +315,19 @@ footer i:hover {
     color: #ff3399;
 }
 
+@media (max-width: 320px) {
+    header {
+        background-position: 0%;
+    }
+    .front-end-dev {
+        font-size: 15px;
+        line-height: 15px;
+        border-size: 10px;
+    }
+    section.about-me {
+        flex-direction: column;
+    }
+}
 /*header:before {*/
 /*    background-image: url("img/mari_home.jpg");*/
 /*    background-size: cover;*/
