--- a/css/index.css
+++ b/css/index.css
@@ -13,7 +13,7 @@ header {
     margin: 0 auto;
     position: relative;
     width: 100%;
-    padding: 20px 100px;
+    padding: 20px 100px ;
 }
 header .header-container {
     display: flex;
@@ -78,21 +78,21 @@ header a {
 html, body {
 	height: 100%;
 }
-section {
+section .projects {
 	position: relative;
 	width: 100%;
 	height: 100%;
 }
-#scroll-down::after {
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	content: '';
-	width: 100%;
-	height: 30%;
-	background: -webkit-linear-gradient(top,rgba(0,0,0,0) 0,rgba(0,0,0,.8) 80%,rgba(0,0,0,.8) 100%);
-	background: linear-gradient(to bottom,rgba(0,0,0,0) 0,rgba(0,0,0,.8) 80%,rgba(0,0,0,.8) 100%);
-}
+/*#scroll-down::after {*/
+/*	position: absolute;*/
+/*	bottom: 0;*/
+/*	left: 0;*/
+/*	content: '';*/
+/*	width: 100%;*/
+/*	height: 30%;*/
+/*	background: -webkit-linear-gradient(top,rgba(0,0,0,0) 0,rgba(0,0,0,.8) 80%,rgba(0,0,0,.8) 100%);*/
+/*	background: linear-gradient(to bottom,rgba(0,0,0,0) 0,rgba(0,0,0,.8) 80%,rgba(0,0,0,.8) 100%);*/
+/*}*/
 /*section h1 {*/
 /*	position: absolute;*/
 /*	top: 50%;*/
@@ -124,10 +124,10 @@ section {
 	opacity: .5;
 }
 
-#section07 a {
+.demo a {
 	padding-top: 80px;
 }
-#section07 a span {
+.demo a span {
 	position: absolute;
 	top: 0;
 	left: 50%;
@@ -143,16 +143,16 @@ section {
 	opacity: 0;
 	box-sizing: border-box;
 }
-#section07 a span:nth-of-type(1) {
+.demo a span:nth-of-type(1) {
 	-webkit-animation-delay: 0s;
 	animation-delay: 0s;
 }
-#section07 a span:nth-of-type(2) {
+.demo a span:nth-of-type(2) {
 	top: 16px;
 	-webkit-animation-delay: .15s;
 	animation-delay: .15s;
 }
-#section07 a span:nth-of-type(3) {
+.demo a span:nth-of-type(3) {
 	top: 32px;
 	-webkit-animation-delay: .3s;
 	animation-delay: .3s;
